--- a/supersite/source/stylesheets/all.scss
+++ b/supersite/source/stylesheets/all.scss
@@ -52,6 +52,10 @@ body! {}
 }
 
 .contact {
+  div {
+    padding: 0.3em;
+  }
+
   font: 1.5rem $font-stack;
 
   .address, .email {
@@ -61,6 +65,7 @@ body! {}
   @media (max-width: 400px)  {
     font: 1.2rem $font-stack;
   }
+
 }
 
 
