At sign to icon, font weight and line height.

--- a/supersite/source/index.html.haml
+++ b/supersite/source/index.html.haml
@@ -2,7 +2,7 @@
 -title="Eläinlääkäri";
 -name ="Anna&nbsp;Kjällman";
 -phone="050&#8209;3574866";
--email = "anna<span>.</span>kjallman<span><span>&#64;</span></span>gmail<span>.</span>com";
+-email = "anna<span>.</span>kjallman<img src='../images/at-icon.png' width='10.5px' height='11.25px'>gmail<span>.</span>com";
 -address = "Jokipuistonkaari 4 A 3, 04130 Sipoo";
 -jobDescription="Kiertävää hevospraktiikkaa ja pieneläinten kotikäyntejä Uudenmaan alueella."
 -contact1="Puhelimella tavoitat parhaiten ma-pe klo 9-16." 
@@ -14,7 +14,7 @@
 
   .text-container
     .contact
-      .title-long #{title}
+      .title #{title}
       .name #{name}
       .phone #{phone}
       .email #{email}
