--- a/supersite/source/stylesheets/all.scss
+++ b/supersite/source/stylesheets/all.scss
@@ -28,6 +28,10 @@ html {
 body! {}
 
 .text-container {
+  font: $font-stack;
+  font-weight: 300;
+  line-height: 130%;
+
   margin: {
     left: auto;
     right: auto;
@@ -60,6 +64,7 @@ body! {}
 
   .address, .email {
     font: 1rem $font-stack;
+    font-weight: 100;
   }
 
   @media (max-width: 400px)  {
